# minimart

./: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/done/: SKILL.md
alembic/: env.py
alembic/versions/: 2026_07_12_1352-6864754d65f9_create_categories_and_products_tables.py  2026_07_13_1327-ad0c40281ada_add_brand_column_to_products_table.py  2026_07_14_1509-00304c736732_adjust_prices_and_default_brand_to_.py  2026_07_16_0711-64fd60b29dcc_add_deleted_at_to_products.py  2026_07_16_0735-2612b7564f77_fix_wrongly_defaulted_deleted_at.py  2026_07_18_1845-26cbd8a980dc_add_sku_to_products.py
app/: main.py
app/categories/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/common/: dependencies.py  pagination.py
app/core/: config.py  database.py
app/products/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
docs/: learning-spec.md
tutorials/: _TEMPLATE.md
tutorials/guides/: dependency-injection-wiring.md  dependency-management.md  filtering-vs-search-api-design.md  migration-commands.md  ruff-commands.md  storing-money-decimal-vs-float.md
tutorials/phases/: database-migrations.md  dependency-wiring-refactor.md  product-catalog-read.md  product-catalog-write.md  project-setup.md  project-structure.md  soft-deletes-and-skus.md
