[project]
name = "minimart"
version = "0.1.0"
description = "MiniMart — a Docker-first FastAPI learning project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.115",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "W",   # pycodestyle warnings — trailing whitespace, newline-at-EOF
    "I",   # isort — deterministic import ordering
    "B",   # flake8-bugbear — real bug patterns
    "UP",  # pyupgrade — modern syntax for your Python version
    "SIM", # flake8-simplify — needless complexity
]
